# Mind_Mate_AI

./: .dockerignore  .env.example  .gitignore  00_READ_ME_FIRST.md  API_DOCS.md  CONVERSION_COMPLETE.md  DEPLOYMENT_READY.md  DOCKER_OPTIMIZATION.md  Detection.py  Dockerfile  EXAMPLES.py  FINAL_SUMMARY.md  HOW_TO_RUN.md  INDEX.md  MIGRATION_GUIDE.md  QUICK_NAV.py  QUICK_START.txt  README.md  README_AR.md  START_HERE.md  WEBSOCKET_EXAMPLE.md  build.sh  check_environment.py  dd.py  docker-compose.yml  download_models.py  emotion.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  run.py  start_server.py  test_api.py  verify_project.py
app/: __init__.py  main.py
app/core/: config.py  security.py
app/models/: __init__.py  live_detection.py
app/routers/: __init__.py  live_detection.py
app/services/: __init__.py  detection_service.py  emotion_classifier.py  face_detector.py  legacy.py  runtime_state.py
src/mind_mate_ai/: __init__.py  ai_client.py  cli.py  conversation.py  mood.py  resources.py
src/mind_mate_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_conversation.py  test_mood.py  test_resources.py
